<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.PortofolioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- view pager slider portofolio-->
                <include
                    android:id="@+id/vp_slider_ads_script_parser"
                    layout="@layout/vp_slider" />

                <!-- indicator selector-->
                <include
                    android:id="@+id/dot_indicator_ads_script_parser"
                    layout="@layout/indicator" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/ads_script_parser"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/convert_your_adsense_script_parser_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- view pager slider portofolio-->
                <include
                    android:id="@+id/vp_slider_konversi_suhu"
                    layout="@layout/vp_slider" />

                <!-- indicator selector-->
                <include
                    android:id="@+id/dot_indicator_konversi_suhu"
                    layout="@layout/indicator" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/konversi_suhu"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/konversi_suhu_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- view pager slider portofolio-->
                <include
                    android:id="@+id/vp_slider_gnews"
                    layout="@layout/vp_slider" />

                <!-- indicator selector-->
                <include
                    android:id="@+id/dot_indicator_gnews"
                    layout="@layout/indicator" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/gnews"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/gnews_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- view pager slider portofolio-->
                <include
                    android:id="@+id/vp_slider_gencoder"
                    layout="@layout/vp_slider" />

                <!-- indicator selector-->
                <include
                    android:id="@+id/dot_indicator_gencoder"
                    layout="@layout/indicator" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/g_encoder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/g_encoder_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/item_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:text="@string/android_library"/>

                <!-- view pager slider portofolio-->
                <include
                    android:id="@+id/vp_slider_gcolorpicker"
                    layout="@layout/vp_slider" />

                <!-- indicator selector-->
                <include
                    android:id="@+id/dot_indicator_gcolorpicker"
                    layout="@layout/indicator" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/gcolorpicker"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/item_margin"
                    android:text="@string/gcolorpicker_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            app:cardElevation="2dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:typeface="serif"
                    android:text="@string/source_all_portofolio"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>